--- a/src/css/components/_project.scss
+++ b/src/css/components/_project.scss
@@ -4,7 +4,7 @@
 @use '../tools/media-queries' as mq;
 @use '../tools/function' as func;
 
-.portfolio {
+.project {
   position: relative;
 
   &__container {
@@ -29,7 +29,7 @@
   }
 
   &__heading {
-    margin-bottom: 80px;
+    margin-bottom: 60px;
     @include mq.tablet {
       margin-bottom: 40px;
     }
@@ -42,12 +42,9 @@
     font: fw.$bold 3.5rem ff.$rubik;
     color: color.$white;
     text-align: center;
-    line-height: 2em;
+    line-height: func.getem(35, 70);
     @include mq.tablet {
-      font-size: 2.8rem;
-    }
-    @include mq.sp {
-      font-size: 2.2rem;
+      font-size: 3rem;
     }
   }
 
@@ -55,11 +52,9 @@
     font: fw.$regular 1.5rem ff.$opensans;
     color: color.$blue-053;
     text-align: center;
+    line-height: func.getem(15, 25);
     @include mq.tablet {
-      font-size: 1.3rem;
-    }
-    @include mq.sp {
-      font-size: 1.1rem;
+      font-size: 1.4rem;
     }
   }
 
@@ -89,14 +84,18 @@
     box-shadow: 10px 10px 2px 0px rgba(243,238,233,.66);
     -webkit-box-shadow: 10px 10px 2px 0px rgba(243,238,233,.66);
     -moz-box-shadow: 10px 10px 2px 0px rgba(243,238,233,.66);
+    @include mq.mx1200 {
+      padding: 40px 20px;
+    }
     @include mq.tablet {
       width: 30%;
-      padding: 20px 3%;
+      padding: 40px 3%;
     }
     @include mq.sp {
       flex-direction: row;
       justify-content: space-between;
       width: 100%;
+      padding: 40px 5%;
       gap: 0 4%;
     }
 
@@ -108,11 +107,10 @@
   &__work-logo {
     width: 200px;
     height: 70px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     @include mq.tablet {
       width: 100%;
       height: 50px;
-      margin-bottom: 15px;
     }
     @include mq.sp {
       width: 40%;
@@ -121,17 +119,15 @@
   }
 
   &__work-description {
-    font: fw.$regular 1.5rem ff.$opensans;
+    font: fw.$regular 1.5rem ff.$rubik;
     color: color.$gray;
     text-align: center;
-    line-height: func.getem(15, 30);
+    line-height: func.getem(15, 25);
     @include mq.tablet {
       font-size: 1.3rem;
     }
     @include mq.sp {
-      flex-grow: 1;
-      width: 30%;
-      font-size: 1.1rem;
+      width: 50%;
       text-align: right;
     }
   }
